# ghpr

./: Cargo.toml  README.md  install.sh  justfile
.github/workflows/: ci.yml  release.yml
src/: app.rs  auth.rs  cli.rs  event.rs  main.rs  update.rs
src/github/: mod.rs  queries.rs  types.rs
src/ui/: compose.rs  mod.rs  pr_detail.rs  pr_list.rs
tests/fixtures/: pr_detail.json  search_prs.json
