[package]
name = "ghpr"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
clap = { version = "4.6.2", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = { version = "0.3.32", default-features = false }
jiff = "0.2.32"
open = "5.4.0"
ratatui = "0.29"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "http2", "charset"] }
self_update = { version = "0.44", default-features = false, features = ["reqwest", "rustls", "archive-tar", "compression-flate2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["rt", "macros", "sync", "time", "process"] }
tui-markdown = "=0.3.3"
tui-textarea = "0.7.0"
